--- a/public/index.html
+++ b/public/index.html
@@ -28,19 +28,14 @@
     <script>
         (function() {
             function getHashParams() {
-                var params = {};
-                var regexp = /([^&;=]+)=?([^&;]*)/g;
-                var query = window.location.hash.substring(1);
-                var result;
-                while ((result = regexp.exec(query)) != null) {
-                    params[result[1]] = decodeURIComponent(result[2]);
-                }
-                return params;
+               window.location.hash.substring(1).split('&').reduce((params, hash) => {
+                  const [key, value] = hash.split('=');
+                  params[key] = decodeURIComponent(value);
+                  return params;
+              }, {})
             }
 
-            var respParams = getHashParams();
-            var accessToken = respParams.access_token;
-            var error = respParams.error;
+            const {access_token, error} = getHashParams();
             if (error) {
                 alert('Authentication error: ' + error);
             }
